--- a/src/app/Core/home/home.component.html
+++ b/src/app/Core/home/home.component.html
@@ -2,7 +2,6 @@
 <div #home_display class="home-display">
     <app-descripcion></app-descripcion>
     <router-outlet></router-outlet>
-    <app-areas></app-areas>
 </div>
 <div style="margin-right: 180px;">
-<app-footer></app-footer></div>
+<app-footer #footer></app-footer></div>
