--- a/src/app/Core/home/navbar/navbar.component.css
+++ b/src/app/Core/home/navbar/navbar.component.css
@@ -4,6 +4,7 @@
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
+    z-index: 10;
     gap: 20px;
     padding: 0px;
     margin: 0px;
@@ -230,10 +231,12 @@ button.menu-container:hover {
 @keyframes dropdown-collapse {
     0% {
         height: 0;
+        overflow: hidden;
     }
 
     100% {
         height: 100vh;
+        overflow: hidden;
     }
 
 }
@@ -259,39 +262,38 @@ button.menu-container:hover {
 }
 
 .dropdown-item {
-    color: whitesmoke;
-    padding-bottom: 15px;
+    display: flex;
+    align-items: center;
     color: #192239;
+    transition: 0.3s;
 }
 
-.dropdown.showNN.expand .dropdown-item {
-    border-width: 0;
-    border-bottom-width: 1px;
-    border-style: solid;
-    border-color: rgba(255, 255, 255, 0.475);
-}
-
-.dropdown.showNN.expand .dropdown-item:hover a span{
-    transform: scale(1.4) translateX(15px);
-    transition: 0.2s;
-}
-
-.dropdown.showNN.expand {
-    background-color: #192239b4;
-}
 
 .expand {
-    width: 140px;
+    width: 160px;
     display: flex;
+    transition: 0.5s;
+    padding-left: 0px;
+}
+
+.expand a{
+    padding-left: 5px;
     transition: 0.5s;
 }
 
+.expand li {
+    margin: 0px 20px;
+    margin-left: 5px;
+    transition: 0.3s;
+}
 
 .dropdown-item img {
     width: 30px;
     height: 50px;
     z-index: 2;
     cursor: pointer;
+    background-color: rgba(245, 245, 245, 0.692);
+    border-radius: 50%;
     padding: 0px 10px;
 }
 
@@ -299,32 +301,44 @@ button.menu-container:hover {
     display: flex;
     animation-name: dropdown-collapse;
     animation-duration: 1s;
-    overflow: hidden;
     transition: 0.5s;
 }
 
 .showNN {
     display: flex;
-    overflow: hidden;
     transition: 0.5s;
 }
 
 a {
     display: flex;
-    text-decoration: none;
     flex-direction: row;
+    gap: 20px;
+    justify-content: flex-start;
     align-items: center;
-    padding-right: 2px;
+    padding: 13px;
+    margin: 0;
+    cursor: pointer;
+    color: #c4c4c4;
+    transition: 0.2s;
+    height: 38px;
 }
 
-a span {
-    font-size: 0.7em;
-    color: whitesmoke;
-    text-decoration: none;
-    animation-timing-function: ease-in-out;
-    transition: 0.5s;
+a:hover {
+    transform: scale(1.2) translateX(15px);
+    transition: 0.2s;
 }
+
 
 .translate{
     transform: translateX(50px) rotateZ(90deg) rotateY(180deg);
+}
+
+.activa--li {
+    background-color: #161a2494;
+    color: #002f86 !important;
+    border-left: #002f86 solid 4px;
+}
+
+span.text{
+    font-size: 0.7em;
 }
