--- a/src/app/Modules/Components/descripcion/descripcion.component.css
+++ b/src/app/Modules/Components/descripcion/descripcion.component.css
@@ -3,7 +3,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
 }
+
+
+h4{
+    font-weight: 550;
+}
+
 .des-content{
     display: flex;
     width: 100%;
