--- a/src/app/Core/home/navbar/navbar.component.css
+++ b/src/app/Core/home/navbar/navbar.component.css
@@ -259,6 +259,8 @@ button.menu-container:hover {
     animation-name: dropdown-pull;
     animation-duration: 0.5s;
     overflow: hidden;
+    user-select: none;
+    pointer-events: none;
 }
 
 .dropdown-item {
