--- a/src/app/Core/home/navbar/navbar.component.html
+++ b/src/app/Core/home/navbar/navbar.component.html
@@ -61,7 +61,7 @@
                             <span>Perfil</span>
                         </li>
                         <li>
-                            <span>Cerar Sesion</span>
+                            <span (click)="logout()" >Cerar Sesion</span>
                         </li>
                     </div>
                 </ul>
