--- a/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
+++ b/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
@@ -1,8 +1,8 @@
 <div class="content-wheel">
-    <div class="charge_wheel" *ngFor="let porcentajeNumerico of porcentajeNumerico; index as i">
+    <div class="charge_wheel" *ngFor="let item of  this.filler; index as i">
         <div class="porcentajes" style="--porcentaje: {{porcentajeNumerico}}">
           <div class="content">
-            <p>Cod 2559637</p>
+            <p></p>
             <p>Etapa Lectiva</p>
             <p>14 aprendices</p>
             <p>{{porcentajeNumerico}}%</p>
