--- a/src/app/Modules/Pages/proyecto-formativo-view/proyecto-formativo-modal/proyecto-formativo-modal.component.css
+++ b/src/app/Modules/Pages/proyecto-formativo-view/proyecto-formativo-modal/proyecto-formativo-modal.component.css
@@ -1,7 +1,9 @@
 .modal-body{
 
+
 }
 
-.mdc-dialog .mdc-dialog__content{
-    padding: 0 !important;
+input.success{
+    border-color: #006B00;
 }
+
