--- a/src/app/Modules/Pages/proyecto-formativo-view/proyecto-formativo/proyecto-formativo.component.html
+++ b/src/app/Modules/Pages/proyecto-formativo-view/proyecto-formativo/proyecto-formativo.component.html
@@ -18,7 +18,7 @@
                         </svg>
                     </div>
                     <div class="actions">
-                        <button (click)="openModalUpdate(proyecto)"><img src="../../../assets/icons/reload.svg"></button>
+                        <button (click)="openModalUpdate1(proyecto)"><img src="../../../assets/icons/reload.svg"></button>
                         <button (click)="deleteProyecto(proyecto.id!)"><img src="../../../assets/icons/delete.svg"></button>
                     </div>
                     
