--- a/src/app/Core/home/navbar/navbar.component.css
+++ b/src/app/Core/home/navbar/navbar.component.css
@@ -6,7 +6,7 @@
     justify-content: space-between;
     z-index: 10;
     gap: 20px;
-    padding: 0px;
+    padding: 5px 0px;
     margin: 0px;
     width: 100%;
     height: 60px;
@@ -26,8 +26,6 @@
 
 .NavBar picture {
     display: flex;
-    max-width: 25px;
-    max-height: 25px;
     align-items: center;
     transition: 0.5s;
 }
@@ -107,7 +105,7 @@
     cursor: pointer;
 }
 
-.user span {
+.user .name {
     opacity: 0;
     text-align: center;
     color: #FFFFFF;
@@ -117,12 +115,11 @@
 
 .NavBar li:nth-child(4):hover span {
     opacity: 1;
-    transition: 0.5s ease-in;
 }
 
 .NavBar picture svg {
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     padding: 2px;
 }
 
@@ -136,7 +133,6 @@ ul {
     padding: 10px;
     fill: #ffffff;
 }
-
 .user img {
     display: flex;
     width: 35px;
@@ -144,7 +140,6 @@ ul {
     border-radius: 50%;
 
 }
-
 .optionUser {
     position: absolute;
     display: none;
@@ -153,42 +148,65 @@ ul {
     align-items: center;
     top: 50px;
     left: -10px;
-    background-color: #192239c0;
-    width: 100px;
-    border-radius: 0 0 10px 10px;
-    padding: 10px 5px;
+    padding: 10px 0px 0px;
     gap: 10px;
-
-
 }
-
 .user .optionUser .options {
-    border-top: #FFFFFF 1px solid;
+    display: flex;
+    flex-direction: column;
+    border-top: #ffffff51 1px solid;
+    gap: 5px;
+    padding: 10px 20px 10px 5px;
+    border-radius: 0 0 10px 10px;
+    background-color: #192239c0;
+    align-items: flex-start;
+}
+.user .optionUser .options li{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     width: 100%;
     padding: 5px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+    transition: 0.1s;
+    gap: 15px;
 }
-
 .options li:hover {
-    transform: scale(0);
-
+    transform: none !important;
 }
-
-.options {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.options li:hover span{
+    color: #2353ac;
+    transition: 0.2s;
 }
-
 img.menu {
     width: 40px;
     height: 50px;
     z-index: 2;
     cursor: pointer;
 }
+.bot {
+    display: flex;
+    flex-direction: column;
+    width: 2.7rem;
+    border: 0;
+    background: transparent;
+    gap: .55rem;
+    justify-content: center;
+    margin: 17px 5px;
+    transition: 0.5s;
+}
+.bot>div {
+    display: flex;
+    background: rgb(255, 255, 255);
+    height: 2px;
+    width: 100%;
+    border-radius: 5px;
+    transition: all .5s;
+    transform-origin: left;
+    justify-content: center;
+    align-items: center;
+}
 
+/******************************************************************/
 .animate-menu {
     transform: rotate(90deg);
     transition: 0.5s;
@@ -344,3 +362,5 @@ a:hover {
 span.text{
     font-size: 0.7em;
 }
+
+/******************************************************************/
