--- a/src/app/Modules/Components/programa-formativo/programa-formativo.component.html
+++ b/src/app/Modules/Components/programa-formativo/programa-formativo.component.html
@@ -1,4 +1,4 @@
-<div class="card-training-program">
+<div class="slider" #slickElement class="card-training-program">
     <div class="training-program" *ngFor="let proyecto of proyectos">
         <div class="active-tokens">
             <p>56</p>
