--- a/src/app/Modules/Pages/areas-view/areas/areas.component.html
+++ b/src/app/Modules/Pages/areas-view/areas/areas.component.html
@@ -1,9 +1,22 @@
 <div class="bloque-slick-information">
   <div class="content-slick-information">
+    <div class="barraBusqueda">
+      <div class="container-4">
+          <label for="search">
+            <input type="search" autocomplete="off" id="search" placeholder="Buscar...">
+            <button class="icon">
+              <span class="material-symbols-outlined">
+                search
+              </span>
+            </button>
+          </label>
+      </div>
+  </div>
     <div class="slick-wrapper">
       <div class="slider" #slickElement>
         <div class="slide-item" *ngFor="let area of areas">
           <div class="area">
+            
             <picture>
               <img width="64" height="64" src={{area.iconUrl}} alt="artificial-intelligence" />
             </picture>
@@ -22,10 +35,22 @@
         </div>
       </div>
     </div>
+    <div class="button">
+      <a><button class="añadir" (click)="openModalCreate()">Añadir</button></a>
+    </div>
+    <div class="descripcion">
+      <div class="desc-title">
+        <h2>Descripcion</h2>
+        <span class="material-symbols-outlined">
+          expand_more
+        </span>
+      </div>
+      <div class="panel-body">
+          <div class="tex-carc">
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae accusamus voluptatem porro placeat ut perferendis praesentium quae ab nostrum animi culpa dolores magnam, esse dignissimos ratione doloribus a ad temporibus!</p>
+          </div>
+      </div>
+  </div>
   </div>
 
-</div>
-
-<div class="button-añadir">
-  <a><button (click)="openModalCreate()">Añadir</button></a>
 </div>
