--- a/src/app/Modules/Pages/areas-view/areas/areas.component.html
+++ b/src/app/Modules/Pages/areas-view/areas/areas.component.html
@@ -16,7 +16,6 @@
       <div class="slider" #slickElement>
         <div class="slide-item" *ngFor="let area of areas">
           <div class="area">
-            
             <picture>
               <img width="64" height="64" src={{area.iconUrl}} alt="artificial-intelligence" />
             </picture>
@@ -25,7 +24,7 @@
               <span>{{ area.codigo }}</span>
             </div>
             <div class="button">
-              <a href=""><button>ir</button></a>
+              <a><button>ir</button></a>
             </div>
           </div>
           <div class="actions">
