--- a/src/app/Modules/Pages/proyecto-formativo-view/proyecto-formativo/proyecto-formativo.component.html
+++ b/src/app/Modules/Pages/proyecto-formativo-view/proyecto-formativo/proyecto-formativo.component.html
@@ -26,8 +26,8 @@
             </div>
         </div>
         <div class="button-añadir">
-            <a><button (click)="openModalCreate()">Añadir</button></a>
-            <a><button (click)="openModalCreate1()">Añadir1</button></a>
+            <a><button  class="add" (click)="openModalCreate()">Añadir</button></a>
+            <a><button class="cancel" (click)="openModalCreate1()">Añadir1</button></a>
         </div>
     </div>
 </div>
