--- a/src/styles.css
+++ b/src/styles.css
@@ -288,3 +288,100 @@ input[type="password"]:-webkit-autofill {
 ::-webkit-scrollbar-thumb:hover {
     background: rgb(245, 245, 245);
 }
+
+/**************************************************/
+ 
+  
+  button.add::before {
+    content: "🗹";
+    color: #fff;
+    font-size: 15px;
+    padding-right: 10px;
+  }
+
+  button.cancel{
+    display: flex;
+    width: 100px;
+    justify-content: center;
+    align-items: center;
+    background-color: #680c0c;
+    border-radius: 20px;
+    color: #fff;
+    border: none;
+    padding: 8px;
+    transition: 0.3s ;
+    cursor: pointer;
+}
+button.add{
+    display: flex;
+    width: 100px;
+    justify-content: center;
+    align-items: center;
+    background-color: #006b00;
+    border-radius: 20px;
+    color: #fff;
+    border: none;
+    padding: 8px;
+    transition: 0.3s ;
+    cursor: pointer;
+}
+
+  button.cancel::before {
+    content: "🛇";
+    color: #fff;
+    font-size: 15px;
+    padding-right: 10px;
+  }
+  /***********************************/
+
+  .wallpaper{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .slider{
+    display: grid;
+    max-width: 80%;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 30px;
+    grid-auto-rows: minmax(100px, auto);
+    justify-content: center
+  }
+  @media (max-width: 812px) {
+    .slider{
+      display: flex;
+    }
+  }
+.mat-mdc-paginator-container{
+    justify-content: center !important;
+  }
+.mat-mdc-paginator-range-actions{
+    position: relative;
+    gap: 20px;
+    justify-content: center;
+  }
+.mat-mdc-paginator{
+    background-color:transparent;
+    color: #fff; 
+  }
+.mat-mdc-paginator svg{
+    fill: #fff;
+  }
+.mat-mdc-paginator button{
+    background-color: #192239d4;
+    border-radius: 22px;
+  }
+.mat-mdc-paginator button:hover{
+    border: solid #203363 1px;
+  }
+.mat-mdc-paginator-range-label{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    bottom:-30px;
+    left: 0;
+    right: 0;
+  }
+  
+  
