--- a/src/app/Core/home/footer/footer.component.css
+++ b/src/app/Core/home/footer/footer.component.css
@@ -7,6 +7,8 @@ footer{
     justify-content: space-between;
     font-size: 13px;
     padding: 0px 10px;
+    margin-left: calc(var(--margin) + 30px);
+    transition: 0.5s;
 }
 
 .footer-content{
