--- a/src/app/Core/home/navbar/navbar.component.css
+++ b/src/app/Core/home/navbar/navbar.component.css
@@ -296,6 +296,10 @@ button.menu-container:hover {
     padding-left: 0px;
 }
 
+.extend {
+ margin-left: 45px;
+}
+
 .expand a{
     padding-left: 5px;
     transition: 0.5s;
@@ -362,5 +366,103 @@ a:hover {
 span.text{
     font-size: 0.7em;
 }
+/*//////////*/
 
+.left-view{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.barraBusqueda{
+    width: 100%;
+    max-width: 600px;
+    padding-left: 40px;
+    transition: 0.5s;
+  }
+
+  
+  .container-4 {
+    overflow: hidden;
+    width: 100%;
+    height: 45px;
+    vertical-align: middle;
+    white-space: nowrap;
+    border: 1px solid #203363 ;
+    border-radius: 20px;
+    z-index: 6;
+    color: #dadada;
+  }
+  
+  .container-4 input#search {
+    z-index: 6;
+    outline: none;
+    width: 30vw;
+    height: 45px;
+    background: transparent;
+    border: none;
+    font-size: 12pt;
+    float: left;
+    color: #ffffff;
+    padding-left: 15px;
+    border-radius: 10px;
+  }
+  
+  .container-4 input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    height: 0;
+    width: 0;
+    overflow: hidden;
+  }
+  
+  
+  
+  .container-4 input#search::-webkit-input-placeholder {
+    color: #c7c7c7;
+  }
+  
+  .container-4 input#search:-ms-input-placeholder {
+    color: #c7c7c7;
+  }
+  
+  .container-4 button.icon {
+    border: none;
+    background: #192239;
+    height: 100%;
+    width: 50px;
+    color: #4f5b66;
+    font-size: 10pt;
+    border-radius: 0 10px 10px 0;
+    transition: 0.5s;
+    margin-left: -30px;
+  }
+  
+  .container-4:hover button.icon,
+  .container-4:focus button.icon {
+    outline: none;
+    opacity: 1;
+    margin-left: 5px;
+  }
+  
+  .icon  span {
+    font-size: 30px;
+    border-radius: 10px;
+    transition: 0.25s;
+    color:#ffffff;
+    padding-top: 3px;
+  }
+ 
+  .container-4:hover button.icon:hover {
+    background: transparent;
+    transition: 0.2s;
+  }
+  .container-4 button.icon img {
+    alt: "Buscar";
+  }
+
+  ::placeholder{
+    color: rgb(173, 3, 3);
+    font-size: 1em;
+  }
 /******************************************************************/
