--- a/src/app/Modules/Components/charge-wheel/charge-wheel.component.css
+++ b/src/app/Modules/Components/charge-wheel/charge-wheel.component.css
@@ -1,4 +1,4 @@
-.content-wheel1{
+.content-wheel1 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -7,16 +7,64 @@
     padding: 50px 0;
 }
 
-.content-wheel{
+
+
+.container {
+    width: 100px;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+  
+  .container p {
+    text-align: center;
+    
+  }
+  
+  .animate{
+    position: relative;
+    right: -100%;
+    animation: marquee 6s linear infinite;
+  }
+
+  @keyframes marquee {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(-200%); }
+  }
+
+
+p:nth-child(1)::-webkit-scrollbar {
+    height: 5px;
+}
+
+p:nth-child(1)::-webkit-scrollbar-track {
+    background: #1820347a;
+}
+
+p:nth-child(1)::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0);
+    border-radius: 10px;
+
+    height: 2px;
+}
+
+p:nth-child(1)::-webkit-scrollbar-thumb:hover {
+    background: rgb(255, 255, 255);
+
+    height: 2px;
+}
+
+
+
+.content-wheel {
     display: grid;
     grid-gap: 20px;
     width: 100%;
-    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     justify-content: space-between;
     justify-items: center;
     align-items: center;
-  
-  }
+
+}
 
 .porcentajes {
     position: relative;
@@ -24,9 +72,11 @@
     align-items: center;
     justify-content: center;
 }
-.content p:nth-child(2), .content p:nth-child(3){
-    color:#9C9C9C;
-    }
+
+.content p:nth-child(2),
+.content p:nth-child(3) {
+    color: #9C9C9C;
+}
 
 .porcentajes .content {
 
@@ -37,7 +87,7 @@
     background-color: #232222;
     padding: 20px;
     width: 110px;
-    height: 110px ;
+    height: 110px;
     border-radius: 50%;
     position: absolute;
 }
@@ -55,21 +105,25 @@ circle {
     stroke-dasharray: 100 100;
     stroke-linecap: round;
 }
-circle:nth-child(1){
+
+circle:nth-child(1) {
     opacity: 0.2;
 }
-svg{
+
+svg {
     border-radius: 50%;
     background-color: #192239;
-    
+
 }
-@keyframes rellenar{
-    to{
-      stroke-dasharray: var(--porcentaje) 100;
+
+@keyframes rellenar {
+    to {
+        stroke-dasharray: var(--porcentaje) 100;
     }
-  }
+}
+
 circle:nth-child(2) {
-    stroke:var(--color);
+    stroke: var(--color);
     stroke-dasharray: 0 100;
     animation: rellenar 1s linear forwards;
 }
