--- a/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
+++ b/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
@@ -1,15 +1,20 @@
 <div class="content-wheel">
-    <div class="charge_wheel" *ngFor="let item of  this.filler; index as i">
+    <div class="charge_wheel" *ngFor="let item of  this.view; index as i">
         <div class="porcentajes" style="--porcentaje: {{porcentajeNumerico}}">
           <div class="content">
-            <p></p>
-            <p>Etapa Lectiva</p>
-            <p>14 aprendices</p>
-            <p>{{porcentajeNumerico}}%</p>
+            <div class="container">
+            <p [ngClass]="{ 'animate': item.itemName.length > 11 }"> {{item.itemName}} </p>
+            <p> ID: {{item.itemId}} </p>
+            <p *ngIf="item.itemOne"> Cod: {{item.itemOne}} </p>
+            <p *ngIf="item.itemTwo"> {{item.itemTwo}} </p>
+            <p *ngIf="item.itemThree"> {{item.itemThree}} </p>
+            <p *ngIf="item.itemFour"> {{item.itemFour}} </p>
+            <p>100%</p>
+          </div>
           </div>
           <svg width="230px" height="230px">
-            <circle r="100px" cx="50%" cy="50%" pathLength="100" [style.stroke]="colores[i]"></circle>
-            <circle r="100px" cx="50%" cy="50%" pathLength="100" [style.stroke]="colores[i]"></circle>
+            <circle r="100px" cx="50%" cy="50%" pathLength="100" [style.stroke]="colores[0]"></circle>
+            <circle r="100px" cx="50%" cy="50%" pathLength="100" [style.stroke]="colores[0]"></circle>
           </svg>
         </div>
       </div>
