--- a/src/app/Modules/Components/icon-chart/icon-chart.component.html
+++ b/src/app/Modules/Components/icon-chart/icon-chart.component.html
@@ -5,9 +5,11 @@
         <picture>
           <img width="64" height="64" src={{item.iconUrl}} alt="artificial-intelligence" />
         </picture>
-        <div>
-          <li>{{ item.itemName }}</li>
-          <span>{{ item.itemOne }}</span>
+        <div class="container">
+          <p [ngClass]="{ 'animate': item.itemName.length > 11 }">{{ item.itemName }}</p>
+          <p>{{ item.itemOne }}</p>
+          <p *ngIf="item.itemTwo">{{ item.itemTwo }}</p>
+          <p *ngIf="item.itemThree">{{ item.itemThree }}</p>
         </div>
         <div class="button">
           <a><button>ir</button></a>
