--- a/src/app/Core/home/navbar/navbar.component.css
+++ b/src/app/Core/home/navbar/navbar.component.css
@@ -385,7 +385,8 @@ span.text{
   
   .container-4 {
     overflow: hidden;
-    width: 100%;
+    width: 35vw;
+    max-width: 600px;
     height: 45px;
     vertical-align: middle;
     white-space: nowrap;
@@ -398,8 +399,9 @@ span.text{
   .container-4 input#search {
     z-index: 6;
     outline: none;
-    width: 30vw;
+    width: 100%;
     height: 45px;
+
     background: transparent;
     border: none;
     font-size: 12pt;
@@ -435,7 +437,7 @@ span.text{
     font-size: 10pt;
     border-radius: 0 10px 10px 0;
     transition: 0.5s;
-    margin-left: -30px;
+    margin-left: -45px;
   }
   
   .container-4:hover button.icon,
