--- a/src/app/Modules/Pages/areas-view/areas/areas.component.html
+++ b/src/app/Modules/Pages/areas-view/areas/areas.component.html
@@ -1,5 +1,6 @@
 
  
+    <app-icon-chart [view]="this.view" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-icon-chart>
     
     <a><button (click)="openModalCreate()"class="add">Añadir</button></a>
     <app-icon-chart-sole [view]="this.soleView" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-icon-chart-sole>
